--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,9 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
+  flutter_screenutil: ^5.9.3
   font_awesome_flutter: ^10.12.0
+  go_router: ^17.1.0
   google_fonts: ^6.2.1
 
 dev_dependencies:
