--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   font_awesome_flutter: ^10.12.0
   go_router: ^17.1.0
   google_fonts: ^6.2.1
+  provider: ^6.1.5+1
 
 dev_dependencies:
   flutter_lints: ^6.0.0
